--- a/家庭宽带配置H2-3E.md
+++ b/家庭宽带配置H2-3E.md
@@ -159,7 +159,7 @@ sidbg 1 DB set TelnetUser 1 Password admin
 sidbg 1 DB save
 ```
 
-把CMCC- 去掉可以去掉WIFI强制的前缀
+#强制wifi前缀为CMCC-
 
 ```
 sidbg 1 DB WLANCfg 0 ESSIDPrefix CMCC-
